// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for Success Page checking TwoFA alert with snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for Success Page should check SuccessPage after render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 makeStyles-pageHeader-3 css-ewf807-MuiGrid-root"
        >
          <div
            class="makeStyles-wrapper-15 MuiBox-root css-0"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthLg css-127nfur-MuiContainer-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-13 css-1vpwcmr-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container makeStyles-header-12 css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item css-i6prtc-MuiGrid-root"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2 makeStyles-title-16 css-rldqdm-MuiTypography-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                >
                  <nav
                    class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-128kl2r-MuiTypography-root-MuiBreadcrumbs-root"
                  >
                    <ol
                      class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
                    />
                  </nav>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg css-p03apy-MuiContainer-root"
          style="padding-top: 0px;"
        >
          <div
            class="makeStyles-boxAlert-2 MuiBox-root css-1pxauac"
          >
            <div
              class="MuiGrid-root makeStyles-iconSuccess-4 css-vj1n65-MuiGrid-root"
            />
            <div
              class="MuiGrid-root makeStyles-mainContent-7 css-vj1n65-MuiGrid-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2 makeStyles-topText-5 css-rldqdm-MuiTypography-root"
              >
                Thank you for your application!
              </h2>
              <p
                class="MuiTypography-root MuiTypography-body1 makeStyles-text-9 css-e3fhh0-MuiTypography-root"
              >
                We are checking your application now, this usually takes from one to three days
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 makeStyles-text-9 css-e3fhh0-MuiTypography-root"
              >
                If you have any further questions, you can always contact our
                 
                <a
                  href=" https://investax.io/contact/ "
                >
                  support department
                </a>
              </p>
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-disableElevation MuiButtonBase-root makeStyles-button-8 css-1dz9je6-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
                href="/app/identity"
                tabindex="0"
              >
                View Identity
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 makeStyles-pageHeader-3 css-ewf807-MuiGrid-root"
      >
        <div
          class="makeStyles-wrapper-15 MuiBox-root css-0"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthLg css-127nfur-MuiContainer-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-13 css-1vpwcmr-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container makeStyles-header-12 css-11lq3yg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item css-i6prtc-MuiGrid-root"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2 makeStyles-title-16 css-rldqdm-MuiTypography-root"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <nav
                  class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-128kl2r-MuiTypography-root-MuiBreadcrumbs-root"
                >
                  <ol
                    class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
                  />
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-p03apy-MuiContainer-root"
        style="padding-top: 0px;"
      >
        <div
          class="makeStyles-boxAlert-2 MuiBox-root css-1pxauac"
        >
          <div
            class="MuiGrid-root makeStyles-iconSuccess-4 css-vj1n65-MuiGrid-root"
          />
          <div
            class="MuiGrid-root makeStyles-mainContent-7 css-vj1n65-MuiGrid-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 makeStyles-topText-5 css-rldqdm-MuiTypography-root"
            >
              Thank you for your application!
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-text-9 css-e3fhh0-MuiTypography-root"
            >
              We are checking your application now, this usually takes from one to three days
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-text-9 css-e3fhh0-MuiTypography-root"
            >
              If you have any further questions, you can always contact our
               
              <a
                href=" https://investax.io/contact/ "
              >
                support department
              </a>
            </p>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-disableElevation MuiButtonBase-root makeStyles-button-8 css-1dz9je6-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
              href="/app/identity"
              tabindex="0"
            >
              View Identity
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
